// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`syncContractData Should store contract data 1`] = `
Object {
  "abi": Object {
    "my": "function",
  },
  "address": "0x123",
  "name": "Contract",
}
`;

exports[`syncTrace Should match with a local contract if the called address is found 1`] = `
Object {
  "trace": Array [
    Object {
      "address": "0x9ca4da328f8f337ffba3ebf39ef40f77df74e9c8",
      "contract": Object {
        "abi": Object {
          "my": "function",
        },
        "address": "0x9ca4da328f8f337ffba3ebf39ef40f77df74e9c8",
        "hashedBytecode": "0x5b83bdbcc56b2e630f2807bbadd2b0c21619108066b92a58de081261089e9ce5",
      },
      "input": "0x485cc9550000000000000000000000004d787c7d124721cd22a5f124bbb06d965fde04ef0000000000000000000000008f2157684351ff3610ebbc5483bb856d7072b34c",
      "op": "call",
    },
  ],
}
`;

exports[`syncTrace Should store a filtered trace 1`] = `
Object {
  "trace": Array [
    Object {
      "address": "0x9ca4da328f8f337ffba3ebf39ef40f77df74e9c8",
      "contract": Object {
        "address": "0x9ca4da328f8f337ffba3ebf39ef40f77df74e9c8",
        "hashedBytecode": "0x5b83bdbcc56b2e630f2807bbadd2b0c21619108066b92a58de081261089e9ce5",
      },
      "op": "create2",
    },
    Object {
      "address": "0x9ca4da328f8f337ffba3ebf39ef40f77df74e9c8",
      "contract": Object {
        "address": "0x9ca4da328f8f337ffba3ebf39ef40f77df74e9c8",
        "hashedBytecode": "0x5b83bdbcc56b2e630f2807bbadd2b0c21619108066b92a58de081261089e9ce5",
      },
      "input": "0x485cc9550000000000000000000000004d787c7d124721cd22a5f124bbb06d965fde04ef0000000000000000000000008f2157684351ff3610ebbc5483bb856d7072b34c",
      "op": "call",
    },
  ],
}
`;

exports[`syncTransaction Should create the contract locally if there no to field 1`] = `
Object {
  "address": "0xc00e94cb662c3520282e6f5717214004a7f26888",
  "timestamp": "1621548462",
}
`;

exports[`syncTransaction Should not break if there is an error during transaction processing 1`] = `
Object {
  "blockHash": "0x02cfea90863e2b298f07b8981cfb0ae04c66ebbfa895338030dde272cb3ddc32",
  "blockNumber": 12695880,
  "chainId": 1,
  "confirmations": 1,
  "data": "0xa9059cbb000000000000000000000000c00e94cb662c3520282e6f5717214004a7f268880000000000000000000000000000000000000000000000000000000000000001",
  "from": "0xe93381fb4c4f14bda253907b18fad305d799241a",
  "gasLimit": "123455",
  "gasPrice": "23",
  "hash": "0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8",
  "methodDetails": null,
  "nonce": 2196963,
  "r": "0x4ba8b20554c3997fcc63e94d68f15ff88e7b8f62828677cfe16dc376df65e8b8",
  "receipt": Object {
    "blockHash": "0x02cfea90863e2b298f07b8981cfb0ae04c66ebbfa895338030dde272cb3ddc32",
    "blockNumber": 12695880,
    "byzantium": true,
    "confirmations": 1,
    "cumulativeGasUsed": "40662",
    "from": "0xe93381fb4c4f14bda253907b18fad305d799241a",
    "gasUsed": "40662",
    "logs": Array [
      Object {
        "address": "0xc00e94Cb662C3520282E6f5717214004A7f26888",
        "blockHash": "0x02cfea90863e2b298f07b8981cfb0ae04c66ebbfa895338030dde272cb3ddc32",
        "blockNumber": 12695880,
        "data": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "logIndex": 0,
        "topics": Array [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000e93381fb4c4f14bda253907b18fad305d799241a",
          "0x000000000000000000000000c00e94cb662c3520282e6f5717214004a7f26888",
        ],
        "transactionHash": "0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8",
        "transactionIndex": 0,
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000200000080000000000010000000000000000000000000000000000000200000008000000000000000000000000000000000000001000000000000000000000400000000000000000000000000000000010000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000000000000000000000080000000000000000000000000000008000000",
    "status": 1,
    "to": "0xc00e94cb662c3520282e6f5717214004a7f26888",
    "transactionHash": "0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8",
    "transactionIndex": 0,
  },
  "s": "0x766f5cd25f9e0acc31f0ef296eda16f3439c663b9866ef891d58636b46c794a7",
  "timestamp": "1621548462",
  "to": "0xc00e94cb662c3520282e6f5717214004a7f26888",
  "transactionIndex": 0,
  "v": 38,
  "value": "0",
}
`;

exports[`syncTransaction Should store the transaction & receipt, decode function signature, and return the hash 1`] = `
Object {
  "blockHash": "0x02cfea90863e2b298f07b8981cfb0ae04c66ebbfa895338030dde272cb3ddc32",
  "blockNumber": 12695880,
  "chainId": 1,
  "confirmations": 1,
  "data": "0xa9059cbb000000000000000000000000c00e94cb662c3520282e6f5717214004a7f268880000000000000000000000000000000000000000000000000000000000000001",
  "from": "0xe93381fb4c4f14bda253907b18fad305d799241a",
  "gasLimit": "123455",
  "gasPrice": "23",
  "hash": "0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8",
  "methodDetails": Object {
    "label": "transfer(
	address dst: 0xc00e94Cb662C3520282E6f5717214004A7f26888,
	uint256 rawAmount: 1
)",
    "name": "transfer",
    "signature": "transfer(address dst, uint256 rawAmount)",
  },
  "nonce": 2196963,
  "r": "0x4ba8b20554c3997fcc63e94d68f15ff88e7b8f62828677cfe16dc376df65e8b8",
  "receipt": Object {
    "blockHash": "0x02cfea90863e2b298f07b8981cfb0ae04c66ebbfa895338030dde272cb3ddc32",
    "blockNumber": 12695880,
    "byzantium": true,
    "confirmations": 1,
    "cumulativeGasUsed": "40662",
    "from": "0xe93381fb4c4f14bda253907b18fad305d799241a",
    "gasUsed": "40662",
    "logs": Array [
      Object {
        "address": "0xc00e94Cb662C3520282E6f5717214004A7f26888",
        "blockHash": "0x02cfea90863e2b298f07b8981cfb0ae04c66ebbfa895338030dde272cb3ddc32",
        "blockNumber": 12695880,
        "data": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "logIndex": 0,
        "topics": Array [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000e93381fb4c4f14bda253907b18fad305d799241a",
          "0x000000000000000000000000c00e94cb662c3520282e6f5717214004a7f26888",
        ],
        "transactionHash": "0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8",
        "transactionIndex": 0,
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000200000080000000000010000000000000000000000000000000000000200000008000000000000000000000000000000000000001000000000000000000000400000000000000000000000000000000010000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000000000000000000000080000000000000000000000000000008000000",
    "status": 1,
    "to": "0xc00e94cb662c3520282e6f5717214004a7f26888",
    "transactionHash": "0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8",
    "transactionIndex": 0,
  },
  "s": "0x766f5cd25f9e0acc31f0ef296eda16f3439c663b9866ef891d58636b46c794a7",
  "timestamp": "1621548462",
  "to": "0xc00e94cb662c3520282e6f5717214004a7f26888",
  "transactionIndex": 0,
  "v": 38,
  "value": "0",
}
`;

exports[`syncTransaction Should store the transaction and return the hash 1`] = `
Object {
  "blockHash": "0x02cfea90863e2b298f07b8981cfb0ae04c66ebbfa895338030dde272cb3ddc32",
  "blockNumber": 12695880,
  "chainId": 1,
  "confirmations": 1,
  "data": "0xa9059cbb000000000000000000000000c00e94cb662c3520282e6f5717214004a7f268880000000000000000000000000000000000000000000000000000000000000001",
  "from": "0xe93381fb4c4f14bda253907b18fad305d799241a",
  "gasLimit": "123455",
  "gasPrice": "23",
  "hash": "0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8",
  "nonce": 2196963,
  "r": "0x4ba8b20554c3997fcc63e94d68f15ff88e7b8f62828677cfe16dc376df65e8b8",
  "s": "0x766f5cd25f9e0acc31f0ef296eda16f3439c663b9866ef891d58636b46c794a7",
  "timestamp": "1621548462",
  "to": "0xc00e94cb662c3520282e6f5717214004a7f26888",
  "transactionIndex": 0,
  "v": 38,
  "value": "0",
}
`;
